Change to new --no-cache option for apk
As of Alpine Linux 3.3 there exists a new --no-cache option for apk. It allows users to install packages with an index that is updated and used on-the-fly and not cached locally. ( https://github.com/gliderlabs/docker-alpine/blob/master/docs/usage.md )

--- a/nmap/Dockerfile
+++ b/nmap/Dockerfile
@@ -6,9 +6,8 @@ FROM alpine:latest
 
 MAINTAINER Brent Salisbury <brent.salisbury@gmail.com>
 
-# build initial cache | install binary | remove cache
-RUN apk update && apk add \
-	nmap \
-	&& rm -rf /var/cache/apk/*
+# install binary without cache
+RUN apk --no-cache add \
+	nmap
 
 ENTRYPOINT ["nmap"]
